--- a/clientes/templates/clientes.html
+++ b/clientes/templates/clientes.html
@@ -20,8 +20,13 @@
                 return result.json()
             }).then(function(data){
                 document.getElementById('att_cliente').style.display = 'block'
+ 
+                id = document.getElementById('id')
+                id.value = data['cliente_id']
+
                 nome = document.getElementById('nome')
                 nome.value = data['cliente']['nome']
+
                 sobrenome = document.getElementById('sobrenome')
                 sobrenome.value = data['cliente']['sobrenome']
                 email = document.getElementById('email')
@@ -29,12 +34,10 @@
                 cpf = document.getElementById('cpf')
                 cpf.value = data['cliente']['cpf']
 
-                //console.log(data)
                 div_cafes = document.getElementById('cafes')
                 div_cafes.innerHTML = ""
                 for(i=0; i < data['cafe'].length; i++){
-                    console.log(data['cafe'][i]['fields']['pedido'])
-
+        
                     div_cafes.innerHTML += "<form action='/clientes/update_cafe/"+data['cafe'][i]['id'] +"' method='POST'>\
                         <div class='row'>\
                             <div class='col-md'>\
@@ -49,11 +52,42 @@
                             <div class='col-md'>\
                                 <input class ='btn-success' type='submit' value='    Salvar    '>\
                             </div>\
+                        </form>\
+                        <div>\
+                                <a class='btn-danger' href='/clientes/excluir_cafe/"+ data['cafe'][i]['id'] +"'>&nbsp;&nbsp; Excluir &nbsp;&nbsp;</a>\
+                        </div>\
                     </div><br>"
                 }
+                
                
             })
         }
+
+        
+function update_cliente(){
+    nome = document.getElementById('nome').value
+    sobrenome = document.getElementById('sobrenome').value
+    email = document.getElementById('email').value
+    cpf = document.getElementById('cpf').value
+    id = document.getElementById('id').value
+
+    fetch('/clientes/update_cliente/'+id ,{
+        method: 'POST',
+        headers: {
+            'X-CSRFToken': csrf_token
+        },
+        body: JSON.stringify({
+            nome: nome,
+            sobrenome: sobrenome,
+            email: email,
+            cpf: cpf,
+        })
+    }).then(function(result) {
+        return result.json()
+    }).then(function(data){
+        console.log(data)
+    })
+}
     </script>
 
 {% endblock %}
@@ -124,9 +158,11 @@
             <p></p>
 
                 <select onchange="executar()" id="cliente_select" class="form-control">
+                    <option value="">
+                        
+                    </option>
 
                     {% for cliente in clientes %}
-
                         <option value="{{ cliente.id }}">
                             {{ cliente.nome }}
                         </option>
@@ -136,6 +172,7 @@
                 <br>
                 <hr>
                 <div id="form-att-cliente">
+                    <input type="hidden" id="id">
                     <p>Nome</p>
                     <input id="nome" type="text" class="form-control">
                     <p>Sobrenome</p>
@@ -144,8 +181,10 @@
                     <input id="email" type="email" class="form-control">
                     <p>CPF</p>
                     <input id="cpf" type="text" class="form-control">
-                    <hr>
-                    <h3>Cafes</h3>
+                    <br>
+                    <input onclick="update_cliente()" type="submit" value="Salvar" class="btn btn-success">
+                    <hr style="background-color: gray;">
+                    <h2>Cafes</h2>
                     <div id="cafes">
 
                     </div>
@@ -153,5 +192,7 @@
             
         </div>
     </div>
-    <script src="{% static 'clientes/js/cliente.js' %}"></script>
+    <script src="{% static 'clientes/js/cliente.js' %}">
+        
+    </script>
 {% endblock %}
