sexto commit do app!

--- a/clientes/templates/clientes.html
+++ b/clientes/templates/clientes.html
@@ -85,7 +85,15 @@ function update_cliente(){
     }).then(function(result) {
         return result.json()
     }).then(function(data){
-        console.log(data)
+        if(data['status'] == '200'){
+        nome = data['nome']
+        sobrenome = data['sobrenome']
+        email = data['email']
+        cpf = data['cpf']
+        console.log('Deu tudo certo! Dados alterados com sucesso!')
+    }else{
+        console.log('Ocorreu um erro!')
+    }
     })
 }
     </script>
