--- a/servicos/templates/novo_servico.html
+++ b/servicos/templates/novo_servico.html
@@ -1,1 +1,15 @@
-Estou no novo serviço!
+{% extends "base.html" %}
+
+{% load static %}
+
+{% block head %}
+    <link rel"stylesheet" href="{% static 'cliente/css/clientes.css' %}">
+{% endblock %}
+
+{% block 'dashboard' %}
+    <br>
+    <br>
+    <div class="container">
+        {{form.as_p}}
+    </div>
+{% endblock %}
