decimo commit do app!

--- a/servicos/templates/novo_servico.html
+++ b/servicos/templates/novo_servico.html
@@ -10,6 +10,9 @@
     <br>
     <br>
     <div class="container">
-        {{form.as_p}}
+        <form action="{% url 'novo_servico' %}" method="POST">{% csrf_token %}
+            {{form.as_p}}
+            <input type="submit" class="btn btn-success" value="Salvar">
+        </form>
     </div>
 {% endblock %}
