--- a/servicos/templates/lista_servico.html
+++ b/servicos/templates/lista_servico.html
@@ -14,7 +14,7 @@
         <table class="table table-dark table-striped-columns">
             <thead>
               <tr>
-                <th scope="col">Protocolo</th>
+                <th scope="col">Identificador</th>
                 <th scope="col">Titulo</th>
                 <th scope="col">Cliente</th>
                 <th scope="col">Status</th>
@@ -24,7 +24,7 @@
             {% for servico in servicos %}
                 <tbody>
                 <tr>
-                    <th>{{servico.protecolo}}</th>
+                    <th><a href="{% url 'servico' servico.identificador %}">{{servico.identificador}}</a></th>
                     <td>{{servico.titulo}}</td>
                     <td>{{servico.cliente}}</td>
                     <td>
