--- a/servicos/templates/servico.html
+++ b/servicos/templates/servico.html
@@ -11,7 +11,8 @@
 
     <br><br><br><br><br>
     <div class="container" >
-
+        <a href="{% url 'gerar_os' servico.identificador %}"> GERAR OS </a>
+        <br>
         {{ servico.titulo }}
 
     </div>
